--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +12,13 @@
   "devDependencies": {
     "@types/node": "^20.2.5",
     "@types/webpack": "^5.28.1",
+    "@types/webpack-dev-server": "^4.7.2",
     "html-webpack-plugin": "^5.5.1",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "webpack": "^5.85.1",
-    "webpack-cli": "^5.1.3"
+    "webpack-cli": "^5.1.3",
+    "webpack-dev-server": "^4.15.0"
   }
 }
